# void-prism-signals

./: .gitignore  README.md  pyproject.toml
artifacts/ancillary/void/: void_prism_three_source_results.json  void_prism_three_source_suite_joint.json
artifacts/ancillary/void/void_prism_joint_explicit_multiembed_20260212_001503UTC/tables/: results.json
artifacts/ancillary/void/void_prism_map_placebo_20260212_64x2/tables/: map_placebo_report.md  map_placebo_results.json
artifacts/ancillary/void/void_prism_signal_battery_20260212_003206UTC/tables/: battery_report.md  battery_results.json
artifacts/ancillary/void/void_prism_signal_battery_l2o_placebo_20260212_rerun/tables/: battery_report.md  battery_results.json
paper_gen/: .gitignore  make_figures.py  void_prism_letter.tex
scripts/: build_theta_maps_tomo_from_act_dr6_sdss_kszx.py  build_void_prism_eg_measurement.py  measure_void_prism_eg_suite_jackknife.py  run_void_prism_eg_joint_test.py  run_void_prism_fast_signal_battery.py  run_void_prism_map_placebo_battery.py  run_void_prism_split_replication.py
src/entropy_horizon_recon/: __init__.py  cache.py  constants.py  cosmology.py  growth.py  sirens.py  void_prism.py  void_prism_maps.py
src/entropy_horizon_recon/optical_bias/: __init__.py  estimators.py  ingest_planck_lensing.py  maps.py
